chain_flow/PSOC_5lp_moisture_sensor.cydsn/ARM_GCC_493/Debug/BUILD.log
--------------- Build Started: 09/26/2016 11:07:22 Project: PSOC_5lp_moisture_sensor, Configuration: ARM GCC 4.9-2015-q1-update Debug ---------------
The code generation step is up to date.
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -Wno-main -I.\chain_flow -I.\chain_flow\chain_flow_assembler -I.\utilities -I.\a_to_d_functions -I.\rtu_modbus -I.\usb_serial -I.\cap_sense -I.\rtc_functions -I.\i2c_master -I.\event_fifo -I.\Die_Temp -I.\cb_measurement -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\ARM_GCC_493\Debug/cf_events.lst -g -Wall -ffunction-sections -O0 -ffat-lto-objects -c .\chain_flow\cf_events.c -o .\ARM_GCC_493\Debug\cf_events.o
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -Wno-main -I.\chain_flow -I.\chain_flow\chain_flow_assembler -I.\utilities -I.\a_to_d_functions -I.\rtu_modbus -I.\usb_serial -I.\cap_sense -I.\rtc_functions -I.\i2c_master -I.\event_fifo -I.\Die_Temp -I.\cb_measurement -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\ARM_GCC_493\Debug/cf_runtime_functions.lst -g -Wall -ffunction-sections -O0 -ffat-lto-objects -c .\chain_flow\cf_runtime_functions.c -o .\ARM_GCC_493\Debug\cf_runtime_functions.o
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -Wno-main -I.\chain_flow -I.\chain_flow\chain_flow_assembler -I.\utilities -I.\a_to_d_functions -I.\rtu_modbus -I.\usb_serial -I.\cap_sense -I.\rtc_functions -I.\i2c_master -I.\event_fifo -I.\Die_Temp -I.\cb_measurement -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\ARM_GCC_493\Debug/cf_external_functions.lst -g -Wall -ffunction-sections -O0 -ffat-lto-objects -c .\chain_flow\cf_external_functions.c -o .\ARM_GCC_493\Debug\cf_external_functions.o
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -Wno-main -I.\chain_flow -I.\chain_flow\chain_flow_assembler -I.\utilities -I.\a_to_d_functions -I.\rtu_modbus -I.\usb_serial -I.\cap_sense -I.\rtc_functions -I.\i2c_master -I.\event_fifo -I.\Die_Temp -I.\cb_measurement -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\ARM_GCC_493\Debug/chain_flow_support.lst -g -Wall -ffunction-sections -O0 -ffat-lto-objects -c .\chain_flow\chain_flow_support.c -o .\ARM_GCC_493\Debug\chain_flow_support.o
In file included from .\chain_flow\chain_flow_support.c:19:0:
.\chain_flow\chain_flow_assembler/cf_chain_flow_include.h:85:81: error: 'True' undeclared here (not in a function)
 { wait_event_fn,(CF_FUN_AUX)NULL,(unsigned)CF_MOISTURE_START_CHANNELS,(unsigned)True,(unsigned)0},
                                                                                 ^
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Build Failed: 09/26/2016 11:07:23 ---------------
